// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

message ReassignmentId {
  // identifies the reassignment batch, built from a hash of source, target, contract ids, contract counters and timestamp.
  string id = 1;
}
